Test coverage for listeners, routes & clusters (#154)
* Update created status code to 201

* Make route & cluster's read-only fields submittable

* Update asserts

* Doc update

* Fix url paths

* Remove unused jsonschema code

* Remove dead code

* Remove dead code

* Change fields to be updatable

* Add organization test

* Remove non-default pytest option

* Fix e2e url
